--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,34 +2,47 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.quyuanjin.im2">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.FLASHLIGHT" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
-
+    <!--gaodemap-->
+    <!--允许程序访问WiFi网络信息-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--允许程序读写手机状态和身份-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <application
-        tools:replace="android:icon,android:appComponentFactory"
         android:name=".app.App"
         android:allowBackup="true"
+        android:appComponentFactory="@string/app_name"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
 
+        android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:appComponentFactory="@string/app_name"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+        tools:replace="android:icon,android:appComponentFactory">
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="fe22ef861e08fa1692f84d508d1d40fe"/>
         <activity
 
             android:name=".ac.SplashAc"
@@ -41,16 +54,17 @@
             </intent-filter>
         </activity>
 
-<activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".ac.ChatAc">
 
         </activity>
-        <activity android:name=".test.QmuiTest"
+        <activity
+            android:name=".test.QmuiTest"
             android:theme="@style/QMUI.Compat">
 
         </activity>
 
-<activity android:name=".test.SqliteTestAc"></activity>
+        <activity android:name=".test.SqliteTestAc"></activity>
 
         <activity android:name=".ac.ContractDetailAc">
 
@@ -63,6 +77,8 @@
         <activity android:name=".ac.RegisterTwo"></activity>
         <activity android:name=".camera.CameraView"></activity>
         <activity android:name=".test.HorizontalNtbActivity"></activity>
+        <activity android:name=".map.MapMainAc"></activity>
+        <activity android:name=".ac.PermissionsActivity"></activity>
     </application>
 
 </manifest>
